# muscatdb

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  NGINX_ADMIN.md  OPTIMIZATION_ROADMAP.md  PEAK_COUNTING_GUIDE.md  README.md  SCIENCE_STACK.md  TECH_STACK.md  TODO.md  TRANSIT_CONSISTENCY_VERIFICATION.md  cronjob.txt  crontab.txt  lco_api_plan.md  photometry_avoid_cid.md  photometry_run_names_plan.md  pyproject.toml  temp.txt
.lavish/: frontend_input_audit.html
data/: FOV_MuSCAT.vot.xml  FOV_MuSCAT2.vot.xml  FOV_MuSCAT3.vot.xml  ariel_targets.csv  crossmatch_results.csv  gaia_ps1_color_transform.md  muscatdb_targets.csv  muscatdb_targets_old.csv
deploy/: nginx.conf  setup-nginx.sh
docs/: CELERY_REDIS_MIGRATION.md  DATABASE_HEALTH_AUDIT_2026-06-30.md  DEPLOYMENT.md  MULTI_USER_AUTH_PLAN.md  MUSCATDB-LITE.md  NOTEBOOK_SETUP.md  PEAK_COUNTING_GUIDE.md  ROADMAP.md  SCIENTIFIC_CORRECTNESS_AUDIT_PLAN_2026-06-30.md  SERVER_INVENTORY.md  TEST_OBSERVATION_OPTIMIZER_PLAN.md  TODO.md  TOI-1410_sky_annulus_experiment.md  TOI-2074_test_observation.md  architecture-review-modular-installation-20260714.md  architecture-review-muscatdb-rename-20260714.md  architecture_audit.md  audit-2026-06-30.md  audit_api.md  gh-page.md  name_normalization.md  security_audit_2026-07-17.md
notebooks/: 01_Target_Lightcurve_Analysis.ipynb  02_Mini_Photometry_Walkthrough.ipynb  03_Ephemeris_OC_Analysis.ipynb  04_FOV_Optimization_Concepts.ipynb  TOPICS.md  _csv_audit.py  exposure_calculator_comparison.ipynb  exposure_time_calculator.ipynb  extras_crossmatch_ariel_muscatdb.ipynb  extras_crossmatch_toi_muscatdb.ipynb  fov_optimization.ipynb
scripts/: check_bad_columns.py  check_truncated_names.py  clean_nonstandard_dates.py  compare_observed_peaks.py  deploy_static_site.sh  download_catalogs.sh  exp_time_calculator_legacy.py  fix_malformed_names.py  ollama_tunnel.sh  rescan_affected.py  rescan_affected_parallel.py  rescan_affected_v2.py  rescan_affected_v3.py  rescan_batch.py  (+5 more)
(+151 files in other folders)
