[project]
name = "muscat-db"
version = "0.1.0"
description = "MuSCAT observation log pipeline — scan FITS files, build database, serve web UI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "astropy>=7",
    "astroquery>=0.4.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "rich>=13",
    "python-dotenv>=1.0",
]

[project.scripts]
muscat-db = "muscat_db.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
markers = [
    "slow: heavyweight full pipeline runs against real data; run with -m slow",
]
addopts = "-m 'not slow'"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Pyflakes only: real defects (unused imports/vars, undefined names, malformed
# f-strings), not whitespace/one-liner/import-placement style — those match the
# project's existing conventions and would drown the signal. The CI lint job is
# advisory until the audit's L1 (bare excepts) / L2 (scattered imports) cleanups
# land; widen `select` (e.g. add "E", "W", "B") and make the job required then.
select = ["F"]
